lib/src/compiler/tests/testdata/errors/64.out
error[E001]: syntax error
 --> line:1:27
  |
1 | rule test { condition: true
  |                           ^ expecting `}`, found end of file
  |